# ai-cross-document-investigation

./: LICENSE  README.md  integration_test_results.txt  main.py  pyproject.toml  test_output.txt  test_results.txt
ai_cross_document_investigation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/: __init__.py  audit.py  auth.py  dependencies.py  main.py  middleware.py  models.py  rbac.py  upload_documents.py
api/routes/: auth_routes.py  rag_routes.py
audit_logs/: audit_log_123-h.jsonl
examples/: rag_example.py
myenv/Scripts/: activate  activate.bat
stage_10_contradictions/: __init__.py  confidence.py  contradiction_pipeline.py  models.py  nli_engine.py  pairing.py  rules.py  severity.py
stage_11_rag/: __init__.py  contradiction_checker.py  gemini_client.py  graph_lookup.py  llm_client.py  models.py  prompt_builder.py  rag_pipeline.py  retriever.py  timeline_checker.py
stage_2_extraction/: __init__.py  audit_logger.py  confidence_scoring.py  docling_loader.py  extract_documents.py  hash_utils.py  models.py  ocr_fallback.py
stage_3_parsing/: __init__.py  header_footer.py  models.py  section_detection.py  speaker_detection.py  structural_parser.py  timestamp_regex.py
stage_4_cleaning/: __init__.py  encoding_fix.py  models.py  noise_removal.py  semantic_cleaner.py  timestamp_normalizer.py  whitespace_normalizer.py
stage_5_chunking/: __init__.py  chunk_rules.py  chunker.py  chunking_pipeline.py  confidence.py  models.py  tokenizer.py
stage_6_ner/: __init__.py  confidence_scoring.py  entity_extractor.py  models.py  ner_pipeline.py  rule_based_entities.py  spacy_loader.py
stage_7_embeddings/: __init__.py  embedder.py  embedding_model.py  embedding_pipeline.py  faiss_index.py  models.py  vector_store.py
stage_8_knowledge_graph/: __init__.py  edge_builder.py  graph_builder.py  graph_pipeline.py  models.py  neo4j_connection.py  node_builder.py
stage_9_timeline/: __init__.py  confidence.py  conflict_detector.py  event_builder.py  gap_detector.py  models.py  sorter.py  timeline_pipeline.py
tests/: test_integration.py
tests/test_stage_10_contradictions/: __init__.py  test_determinism.py  test_models.py  test_pairing.py  test_pipeline.py  test_rules.py
tests/test_stage_11_rag/: __init__.py  test_determinism.py  test_models.py  test_pipeline.py
tests/test_stage_3_parsing/: __init__.py  test_header_footer.py  test_section_detection.py  test_speaker_detection.py  test_structural_parser.py  test_timestamp_regex.py
tests/test_stage_4_cleaning/: __init__.py  test_encoding_fix.py  test_noise_removal.py  test_semantic_cleaner.py  test_timestamp_normalizer.py  test_whitespace_normalizer.py
tests/test_stage_5_chunking/: __init__.py  test_chunk_rules.py  test_chunker.py  test_confidence.py  test_determinism.py  test_models.py  test_pipeline.py  test_tokenizer.py
tests/test_stage_6_ner/: __init__.py  test_entity_extractor.py  test_models.py  test_pipeline.py  test_rule_based.py
tests/test_stage_7_embeddings/: __init__.py  test_determinism.py  test_embedder.py  test_embedding_model.py  test_faiss_index.py  test_models.py  test_pipeline.py
tests/test_stage_8_knowledge_graph/: __init__.py  test_determinism.py  test_edge_builder.py  test_graph_builder.py  test_models.py  test_node_builder.py  test_pipeline.py
tests/test_stage_9_timeline/: __init__.py  test_conflict_detector.py  test_determinism.py  (+5 more)
